[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/objects/misc/jetpacks/jetpacks.png" type="Texture" id=1]
[ext_resource path="res://src/objects/jet_packs/scenes/Jetpack.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/rocket.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.256917, 0.98419 )
colors = PoolColorArray( 0.182062, 0.176266, 0.191406, 1, 0.432816, 0.449331, 0.484375, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = -10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )

[node name="Jetpack" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -2, 5 )
emitting = false
amount = 20
lifetime = 0.3
randomness = 0.34
process_material = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="recharge_rate" type="Timer" parent="."]
process_mode = 0
wait_time = 0.08
one_shot = true

[node name="recharge_delay" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="timeout" from="recharge_rate" to="." method="_on_recharge_rate_timeout"]
[connection signal="timeout" from="recharge_delay" to="." method="_on_recharge_delay_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
